sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/Item_Inventory_Count__c.object-meta.xml
<CustomObject>
    <label>Item Inventory Count</label>
    <nameField>
        <displayFormat>AIC-{0000}</displayFormat>
        <label>Inventory Counts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Item Inventory Counts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>