sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Count_Value__c.field-meta.xml
<CustomField>
    <fullName>Count_Value__c</fullName>
    <formula>Physical_Count__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>