sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>Inventory_Item__r.Currency_Config__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>