sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Inventory_Count__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Count__c</fullName>
    <label>Inventory Count</label>
    <referenceTo>Inventory_Count__c</referenceTo>
    <relationshipLabel>Item Inventory Counts</relationshipLabel>
    <relationshipName>Item_Inventory_Counts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>