sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Item Inventory Counts</relationshipLabel>
    <relationshipName>Item_Inventory_Counts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>