sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Inventory_Stock__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Stock__c</fullName>
    <label>Inventory Stock</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>