sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Item_Location__c.field-meta.xml
<CustomField>
    <fullName>Item_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item Location</label>
    <referenceTo>Inventory_Item_Location__c</referenceTo>
    <relationshipLabel>Item Inventory Counts</relationshipLabel>
    <relationshipName>Item_Inventory_Counts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>