sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Item_Lot__c.field-meta.xml
<CustomField>
    <fullName>Item_Lot__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item Lot</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Item_Location__c</field>
            <operation>equals</operation>
            <valueField>Item_Location_Lot__c.Item_Location__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Item_Location_Lot__c</referenceTo>
    <relationshipLabel>Item Inventory Counts</relationshipLabel>
    <relationshipName>Item_Inventory_Counts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>