sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Lot_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Lot_Quantity__c</fullName>
    <formula>Item_Lot__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>