sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Physical_Count__c.field-meta.xml
<CustomField>
    <fullName>Physical_Count__c</fullName>
    <label>Physical Count</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>