sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Quantity_Variance__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Variance__c</fullName>
    <formula>Inventory_Stock__c  -  Physical_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>