sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Remove_Location__c.field-meta.xml
<CustomField>
    <fullName>Remove_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Location</label>
    <type>Checkbox</type>
</CustomField>