sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Stock_Value__c.field-meta.xml
<CustomField>
    <fullName>Stock_Value__c</fullName>
    <formula>Inventory_Stock__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>