sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/UoM__c.field-meta.xml
<CustomField>
    <fullName>UoM__c</fullName>
    <formula>Inventory_Item__r.Inventory_UoM__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UoM</label>
    <type>Text</type>
</CustomField>