sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Value_Variance__c.field-meta.xml
<CustomField>
    <fullName>Value_Variance__c</fullName>
    <formula>Stock_Value__c  -  Count_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>