sfSandBoxCode/force-app/main/default/objects/Item_Inventory_Count__c/fields/Variance_Check__c.field-meta.xml
<CustomField>
    <fullName>Variance_Check__c</fullName>
    <formula>Lot_Quantity__c - Quantity_Variance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Check</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>